--- a/HACKING
+++ b/HACKING
@@ -4,7 +4,12 @@ HACKING
 Cinnamon-Screensaver is normally build using dpkg. If using Linux Mint, Ubuntu,
 or any other member of the Debian family, install the `devscripts` package with
  `sudo apt-get install devscripts`.
- 
+
+Other dependencies that may be needed to get it to build:
+  `sudo apt install dh-make dh-python gobject-introspection meson build-essential libgtk-3-dev libxdo-dev libgirepository1.0-dev`
+
+
+
 Once you have devscripts, run `debuild -us -uc` to build cinnamon-screensaver
 (or any other cinnamon package) and `sudo dpkg -i ../cinnamon-screensaver_{version}_{arch}.deb`
 to install.
